# Computational-physica-scientific-work

./: CMakeLists.txt  README.md
01_meshes/: double_ear_bracket.stl  hw_circle_2D.cpp  hw_cube_3D.cpp  hw_cylinder_3D.cpp  hw_stl_obj_3D.cpp  hw_torus_3D.cpp  sample04.cpp
02_vtk/: CMakeLists.txt  bracket_1.mov  bracket_2.mov  hw_stl_obj_3D.cpp  sample_tetr3d.cpp
03_fenics/cpp/: CMakeLists.txt  HyperElasticity.cpp  HyperElasticity.h  HyperElasticity.ufl  Poisson.cpp  Poisson.h  Poisson.ufl
03_fenics/cpp-fenicsx/: CMakeLists.txt  main.cpp  poisson.py
results/: results_latest_run_second_iteration.mov
results/latest_run/: box_loads.csv  box_series.pvd  first_iteration.mov  water_series.pvd
results/latest_run/box/: box_0010.vtu  box_0022.vtp  box_0024.vtu  box_0025.vtu  box_0038.vtu  box_0039.vtu  box_0040.vtu  box_0041.vtu  box_0042.vtu  box_0047.vtu  box_0049.vtu  box_0050.vtu  box_0054.vtu  box_0055.vtu  box_0056.vtu  box_0059.vtu  box_0060.vtu  box_0061.vtu  box_0062.vtu  box_0063.vtu  box_0064.vtu  box_0065.vtu  box_0066.vtu  box_0067.vtu  box_0068.vtu  box_0069.vtu  box_0070.vtu  box_0071.vtu  box_0072.vtu  box_0073.vtu  box_0074.vtu  box_0075.vtu  box_0076.vtu  box_0077.vtu  box_0078.vtu  box_0079.vtu  box_0080.vtu  box_0081.vtu  box_0082.vtp  box_0082.vtu  (+136 more)
results/latest_run/ground/: ground.vtp
results/latest_run/mesh/: box_shell.msh  box_shell.vtu
results/latest_run/water/: water_0000.vtp  water_0001.vtp  water_0002.vtp  water_0003.vtp  water_0004.vtp  water_0005.vtp  water_0006.vtp  water_0007.vtp  water_0008.vtp  water_0009.vtp  water_0010.vtp  water_0011.vtp  water_0012.vtp  water_0013.vtp  water_0014.vtp  water_0015.vtp  water_0016.vtp  water_0017.vtp  water_0018.vtp  water_0019.vtp  water_0020.vtp  water_0021.vtp  water_0022.vtp  water_0023.vtp  water_0024.vtp  water_0025.vtp  water_0026.vtp  water_0027.vtp  water_0028.vtp  water_0029.vtp  water_0030.vtp  water_0031.vtp  water_0032.vtp  water_0033.vtp  water_0034.vtp  water_0035.vtp  water_0036.vtp  water_0037.vtp  water_0038.vtp  water_0039.vtp  (+161 more)
results/mesh_preview/: box_shell.vtu
src/: box_mesh_preview.cpp  fenics_box_solver.py  gmsh_box.cpp  gmsh_box.hpp  main.cpp  simulation.cpp  simulation.hpp  vtk_writer.cpp  vtk_writer.hpp
